First stage of 0.5 completed